force-app/main/default/objects/Weight__c/Weight__c.object-meta.xml
<CustomObject>
    <label>Weight</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>