force-app/main/default/objects/Weight__c/fields/BinLift__c.field-meta.xml
<CustomField>
    <fullName>BinLift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bin Lift</label>
    <referenceTo>BinLift__c</referenceTo>
    <relationshipLabel>Weights</relationshipLabel>
    <relationshipName>Weights</relationshipName>
    <type>Lookup</type>
</CustomField>