force-app/main/default/objects/Weight__c/fields/BinWeight__c.field-meta.xml
<CustomField>
    <fullName>BinWeight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bin Weight</label>
    <referenceTo>BinWeight__c</referenceTo>
    <relationshipLabel>Weights</relationshipLabel>
    <relationshipName>Weights</relationshipName>
    <type>Lookup</type>
</CustomField>