force-app/main/default/objects/Weight__c/fields/Coffee_KG_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Coffee_KG_Per_Unit__c</fullName>
    <label>Coffee KG Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>