force-app/main/default/objects/Weight__c/fields/KWH_Produced_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>KWH_Produced_Per_Unit__c</fullName>
    <label>KWH Produced Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>