force-app/main/default/objects/Weight__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Weights</relationshipLabel>
    <relationshipName>Weights</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>