force-app/main/default/objects/Weight__c/fields/Overweight__c.field-meta.xml
<CustomField>
    <fullName>Overweight__c</fullName>
    <formula>MAX(Total_KG_Per_Unit__c - IF(ISBLANK(AllowedWeight__c), Order_Product__r.Total_KG_Per_Unit__c, AllowedWeight__c), 0)</formula>
    <label>Overweight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>