force-app/main/default/objects/Weight__c/fields/Tonnes_CO2_Saved_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Tonnes_CO2_Saved_Per_Unit__c</fullName>
    <label>Tonnes CO2 Saved Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>