force-app/main/default/objects/Weight__c/fields/Total_KG_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Total_KG_Per_Unit__c</fullName>
    <label>Total KG Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>