force-app/main/default/objects/Weight__c/fields/Trees_Saved_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Trees_Saved_Per_Unit__c</fullName>
    <label>Trees Saved Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>