force-app/main/default/objects/Weight__c/fields/WTE_KG_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>WTE_KG_Per_Unit__c</fullName>
    <label>WTE KG Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>